[package]
name = "tripcode"
version = "0.1.0"
authors = ["Huton"]
license = "MIT/Apache-2.0"
repository = "https://github.com/huton/"
documentation = "https://docs.rs/tripcode/"
description = "A Rust library for generating tripcodes on imageboards and textboards."
readme = "README.md"
keywords = ["tripcode", "4chan", "2channel", "imageboard", "textboard"]

[dependencies]
getopts = "0.2"
rust-crypto = "0.2"

[dev-dependencies]
encoding = "0.2"

[lib]
bench = false

[[bin]]
name = "tripcode"
path = "src/bin/main.rs"
doc = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
