[package]
name = "tripcode"
version = "0.3.0"
authors = ["Huton", "Fredrick R. Brennan <copypaste@kittens.ph>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/huton/tripcode-rs"
documentation = "https://docs.rs/tripcode/"
description = "A library for generating tripcodes on imageboards and textboards."
readme = "README.md"
keywords = ["tripcode", "4chan", "2channel", "imageboard", "textboard", "keijiban", "BBS", "掲示板", "トリップ"]

[dependencies]
rust-crypto = "0.2"

[dev-dependencies]
encoding = "0.2"

[lib]
bench = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
